# video-translator

./: .dockerignore  .gitignore  AI_Video_Translation_Service_HLD.md  Assignment.md  DEPLOYMENT_GUIDE.md  DOCKER_AWS_ARCHITECTURE.md  Dockerfile  ENVIRONMENT_VARIABLES.md  MODULE_RENAME_CHANGES.md  Makefile  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE5_COMPLETION_SUMMARY.md  README.md  README_PHASE1.md  README_PHASE2.md  README_PHASE3.md  README_PHASE5.md  docker-compose.yml  env.example  pyproject.toml  quick-start.sh  requirements.txt  requirements_minimal.txt  setup.py
.github/workflows/: ci.yml
app/: __init__.py  dubbing.py  exit_code.py  main.py  translator.py
app/models/: __init__.py  job_models.py  translation_models.py
app/services/: ai_service_factory.py  database_service.py  job_queue_service.py  translation_service.py  util.py
aws/: cloudformation-infrastructure.yml  deploy.sh  task-definition.json
codebase_explained/: README.md  architecture.md  components.md  entry_point.md  execution_flow.md  flow_diagrams.md  overview.md
e2e-tests/: cmd_test.py
open_dubbing/: audio_processing.py  command_line.py  dubbing.py  exit_code.py  ffmpeg.py  main.py  preprocessing.py  speech_to_text_faster_whisper.py  speech_to_text_whisper_transformers.py  text_to_speech.py  text_to_speech_api.py  text_to_speech_openai.py  utterance.py
open_dubbing/stt/: speech_to_text_faster_whisper.py  speech_to_text_whisper_transformers.py
open_dubbing/translation/: translation_nllb.py
open_dubbing/tts/: text_to_speech_api.py  text_to_speech_mms.py  text_to_speech_openai.py
static/css/: style.css
static/js/: app.js
templates/: index.html
(+33 files in other folders)
