[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-video-translation"
version = "5.0.0"
description = "AI Video Translation Service with complete web interface"
readme = "README.md"
license = {text = "Apache Software License 2.0"}
authors = [
    {name = "AI Video Translation Team"}
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0", 
    "faster-whisper>=0.10.0",
    "pyannote.audio>=3.1.0",
    "moviepy>=1.0.3",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "websockets>=11.0.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.19.0",
    "aiofiles>=23.0.0",
    "boto3>=1.29.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "ffmpeg-python>=0.2.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "structlog>=23.0.0"
]

[project.optional-dependencies]
dev = ["flake8==7.*", "black==24.*", "pytest==8.*", "isort==5.13"]
openai = ["openai==1.59.3"]

[project.urls]
Homepage = "https://github.com/your-org/ai-video-translation"
Documentation = "https://github.com/your-org/ai-video-translation/blob/main/README.md"

[tool.flake8]
max-line-length = 250
ignore = ["E203", "W503"]

[tool.isort]
profile = "black"
lines_between_types = 1 